Ajout de la transition de maintient sur les chaines de caracteres et les constants de un charactère.

--- a/XtractK/XtractK/XtractK.vcxproj.filters
+++ b/XtractK/XtractK/XtractK.vcxproj.filters
@@ -141,6 +141,9 @@
     <ClInclude Include="TransitionNewConstant.h">
       <Filter>Header Files\XtractK\Transition</Filter>
     </ClInclude>
+    <ClInclude Include="TransitionKChar.h">
+      <Filter>Header Files\XtractK\Transition</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -225,6 +228,9 @@
       <Filter>Header Files\XtractK\Transition</Filter>
     </ClCompile>
     <ClCompile Include="TransitionExitEscape.cpp">
+      <Filter>Source Files\XtractK\Transition</Filter>
+    </ClCompile>
+    <ClCompile Include="TransitionKChar.cpp">
       <Filter>Source Files\XtractK\Transition</Filter>
     </ClCompile>
   </ItemGroup>
