--- a/XtractK/XtractK/XtractK.vcxproj
+++ b/XtractK/XtractK/XtractK.vcxproj
@@ -40,6 +40,7 @@
     <ClInclude Include="TransitionExitingCppStyle.h" />
     <ClInclude Include="TransitionExitingCStyle.h" />
     <ClInclude Include="TransitionInComment.h" />
+    <ClInclude Include="TransitionKChar.h" />
     <ClInclude Include="TransitionNewComment.h" />
     <ClInclude Include="TransitionNewConstant.h" />
     <ClInclude Include="TransitionOStream.h" />
@@ -70,6 +71,7 @@
     <ClCompile Include="TransitionExitingCppStyle.cpp" />
     <ClCompile Include="TransitionExitingCStyle.cpp" />
     <ClCompile Include="TransitionInComment.cpp" />
+    <ClCompile Include="TransitionKChar.cpp" />
     <ClCompile Include="TransitionNewComment.cpp" />
     <ClCompile Include="TransitionNewConstant.cpp" />
     <ClCompile Include="TransitionOStream.cpp" />
