Modifications de la transition de sortie des constante textuelles pour des sauts des sauts de ligne (cela implique l'ajout d'une transition specifique)

--- a/XtractK/XtractK/XtractK.vcxproj.filters
+++ b/XtractK/XtractK/XtractK.vcxproj.filters
@@ -144,6 +144,9 @@
     <ClInclude Include="TransitionKChar.h">
       <Filter>Header Files\XtractK\Transition</Filter>
     </ClInclude>
+    <ClInclude Include="TransitionExitK.h">
+      <Filter>Header Files\XtractK\Transition</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -231,6 +234,9 @@
       <Filter>Source Files\XtractK\Transition</Filter>
     </ClCompile>
     <ClCompile Include="TransitionKChar.cpp">
+      <Filter>Source Files\XtractK\Transition</Filter>
+    </ClCompile>
+    <ClCompile Include="TransitionExitK.cpp">
       <Filter>Source Files\XtractK\Transition</Filter>
     </ClCompile>
   </ItemGroup>
