--- a/XtractK/XtractK/XtractK.vcxproj
+++ b/XtractK/XtractK/XtractK.vcxproj
@@ -39,6 +39,7 @@
     <ClInclude Include="TransitionCounter.h" />
     <ClInclude Include="TransitionExitingCppStyle.h" />
     <ClInclude Include="TransitionExitingCStyle.h" />
+    <ClInclude Include="TransitionExitK.h" />
     <ClInclude Include="TransitionInComment.h" />
     <ClInclude Include="TransitionKChar.h" />
     <ClInclude Include="TransitionNewComment.h" />
@@ -70,6 +71,7 @@
     <ClCompile Include="TransitionExitEscape.h" />
     <ClCompile Include="TransitionExitingCppStyle.cpp" />
     <ClCompile Include="TransitionExitingCStyle.cpp" />
+    <ClCompile Include="TransitionExitK.cpp" />
     <ClCompile Include="TransitionInComment.cpp" />
     <ClCompile Include="TransitionKChar.cpp" />
     <ClCompile Include="TransitionNewComment.cpp" />
