Création, assignation et ajouts des états numériques à la FSM. Ajout préliminaire de la classe MatchRangeSymbols.h

--- a/XtractK/XtractK/XtractK.vcxproj
+++ b/XtractK/XtractK/XtractK.vcxproj
@@ -30,6 +30,7 @@
     <ClInclude Include="MatchListSymbols.h" />
     <ClInclude Include="MatchNotListSymbols.h" />
     <ClInclude Include="MatchNotSingleSymbol.h" />
+    <ClInclude Include="MatchRangeSymbols.h" />
     <ClInclude Include="MatchSingleSymbol.h" />
     <ClInclude Include="State.h" />
     <ClInclude Include="StateCounter.h" />
