--- a/XtractK/XtractK/XtractK.vcxproj
+++ b/XtractK/XtractK/XtractK.vcxproj
@@ -27,6 +27,7 @@
     <ClInclude Include="FSMCppConstantExtraction.h" />
     <ClInclude Include="FSMFileStatistics.h" />
     <ClInclude Include="MatchAllSymbols.h" />
+    <ClInclude Include="MatchListRangesSymbols.h" />
     <ClInclude Include="MatchListSymbols.h" />
     <ClInclude Include="MatchNotListSymbols.h" />
     <ClInclude Include="MatchNotSingleSymbol.h" />
@@ -59,6 +60,7 @@
     <ClCompile Include="FSMFileStatistics.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MatchAllSymbols.cpp" />
+    <ClCompile Include="MatchListRangesSymbols.cpp" />
     <ClCompile Include="MatchListSymbols.cpp" />
     <ClCompile Include="MatchNotListSymbols.cpp" />
     <ClCompile Include="MatchNotSingleSymbol.cpp" />
