Finitions de la class MatchListRangeSymbol, MatchRangeSymbol et Range.

--- a/XtractK/XtractK/XtractK.vcxproj.filters
+++ b/XtractK/XtractK/XtractK.vcxproj.filters
@@ -150,7 +150,10 @@
     <ClInclude Include="MatchRangeSymbols.h">
       <Filter>Header Files\Finite State Machine\Symbol</Filter>
     </ClInclude>
-    <ClInclude Include="MatchListRangesSymbols.h">
+    <ClInclude Include="MatchListRangeSymbols.h">
+      <Filter>Header Files\Finite State Machine\Symbol</Filter>
+    </ClInclude>
+    <ClInclude Include="Range.h">
       <Filter>Header Files\Finite State Machine\Symbol</Filter>
     </ClInclude>
   </ItemGroup>
@@ -248,7 +251,10 @@
     <ClCompile Include="MatchRangeSymbols.cpp">
       <Filter>Source Files\Finite State Machine\Symbol</Filter>
     </ClCompile>
-    <ClCompile Include="MatchListRangesSymbols.cpp">
+    <ClCompile Include="MatchListRangeSymbols.cpp">
+      <Filter>Source Files\Finite State Machine\Symbol</Filter>
+    </ClCompile>
+    <ClCompile Include="Range.cpp">
       <Filter>Source Files\Finite State Machine\Symbol</Filter>
     </ClCompile>
   </ItemGroup>
